fixed overflow visibility

--- a/MMM-NewsFeedTicker.css
+++ b/MMM-NewsFeedTicker.css
@@ -1,71 +1,44 @@
 @-webkit-keyframes marquee {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
+    0% { left: 100%; }
+    100% { left: -100%; }
+  }
+  
+  @-moz-keyframes marquee {
+      0% { left: 100%; }
+      100% { left: -100%; }
+  }
+  
+  @-ms-keyframes marquee {
+      0% { left: 100%; }
+      100% { left: -100%; }
+  }
+  
+  @-o-keyframes marquee {
+      0% { left: 100%; }
+      100% { left: -100%; }
+  }
+  
+  @keyframes marquee {
+      0% { left: 100%; }
+      100% { left: -100%; }
+  }
 
-@-moz-keyframes marquee {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
-
-@-ms-keyframes marquee {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
-
-@-o-keyframes marquee {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
-
-@keyframes marquee {
-    0% {
-        transform: translateX(100%);
-    }
-    100% {
-        transform: translateX(-100%);
-    }
-}
-
-.MMM-NewsFeedTicker {
+  .MMM-NewsFeedTicker {
     width: 100%;
     height: 50px;
     line-height: 100%;
     overflow: hidden;
-    overflow-x: hidden;
     background: rgb(104, 9, 9);
 }
 
 .MMM-NewsFeedTicker .tickerbody {
     width: 100%;
-    position: absolute;
-    bottom: 15px;
-    right: 0;
+    position: relative;
+    bottom: 0;
+    left: 0;
     white-space: nowrap;
+    overflow: visible;
     text-align: left;
-    vertical-align: middle;
-    /* Starting position */
-    -webkit-transform: translateX(100%);
-    -moz-transform: translateX(100%);
-    -ms-transform: translateX(100%);
-    -o-transform: translateX(100%);
-    transform: translateX(100%);
     -webkit-animation: marquee linear infinite;
     -moz-animation: marquee linear infinite;
     -ms-animation: marquee linear infinite;
@@ -74,8 +47,8 @@
 }
 
 .MMM-NewsFeedTicker .headline {
-    font-size: 35px;
-    padding-top: 15px;
+    font-size: 40px;
+    font-weight: bold;
     overflow: hidden;
     margin: 0 auto;
     white-space: nowrap;
@@ -89,6 +62,6 @@
     bottom: 0;
     left: 0;
     height: 50px;
-    z-index: 10;
-    background-color: #FFF;
+    z-index: 1;
+    background: rgb(104, 9, 9);
 }
